- PR/50291: Fix memory leak - estrdup/emalloc - use EXIT_FAILURE instead of 1